; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_caca_gfx.c_caca_gfx_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_caca_gfx.c_caca_gfx_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@caca_display = common dso_local global i32* null, align 8
@caca_dither = common dso_local global i32* null, align 8
@caca_menu_frame = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @caca_gfx_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @caca_gfx_free(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i32*, i32** @caca_display, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32*, i32** @caca_display, align 8
  %8 = call i32 @caca_free_display(i32* %7)
  store i32* null, i32** @caca_display, align 8
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i32*, i32** @caca_dither, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32*, i32** @caca_dither, align 8
  %14 = call i32 @caca_free_dither(i32* %13)
  store i32* null, i32** @caca_dither, align 8
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i32*, i32** @caca_menu_frame, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %15
  %19 = load i32*, i32** @caca_menu_frame, align 8
  %20 = call i32 @free(i32* %19)
  store i32* null, i32** @caca_menu_frame, align 8
  br label %21

21:                                               ; preds = %18, %15
  ret void
}

declare dso_local i32 @caca_free_display(i32*) #1

declare dso_local i32 @caca_free_dither(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
